--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,5 +11,5 @@ docker_graph_dir: /var/lib/docker
 docker_engine:
   docker_gpg_key: 58118E89F3A912897C070ADBF76221572C52609D
   key_server: ha.pool.sks-keyservers.net
-  storagedriver: overlay
+  storagedriver: devicemapper
   insecure_registry: 172.30.0.0/16
