--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,7 +24,7 @@
     - docker
 
 - name: test if docker is installed
-  command: docker
+  command: docker version
   register: dockerinstalled
   ignore_errors: True
   changed_when: False
