--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -57,12 +57,9 @@
 
 - name: remove the docker proxy configs
   file:
-    path: "{{ item }}"
+    path: /etc/systemd/docker.service.d/http-proxy.conf
     state: absent
   when: docker_http_proxy is not defined and docker_https_proxy is not defined
-  with_items:
-    - /etc/systemd/docker.service.d/http-proxy.conf
-    - /etc/sysconfig/docker
   tags:
     - template
 
