--- a/templates/docker.service
+++ b/templates/docker.service
@@ -1,23 +1,17 @@
 [Unit]
 Description=Docker Application Container Engine
 Documentation=https://docs.docker.com
-After=network.target
+After=network-online.target firewalld.service
+Wants=network-online.target
 
 [Service]
 EnvironmentFile=-/etc/sysconfig/docker
-EnvironmentFile=-/etc/sysconfig/docker-storage
-EnvironmentFile=-/etc/sysconfig/docker-network
 Type=notify
 # the default is not to use systemd for cgroups because the delegate issues still
 # exists and systemd currently does not support the cgroup feature set required
 # for containers run by docker
-ExecStart=/usr/bin/dockerd \
---graph={{ docker_graph_dir }} \
---exec-opt native.cgroupdriver=systemd \
---add-runtime docker-runc=/usr/libexec/docker/docker-runc-latest \
---userland-proxy-path=/usr/libexec/docker/docker-proxy-latest \
---default-runtime=docker-runc \
---selinux-enabled -s "{{ docker_engine.storagedriver }}" --insecure-registry "{{ docker_engine.insecure_registry }}" --insecure-registry={{ repository_registry }}
+ExecStart=/usr/bin/dockerd
+
 ExecReload=/bin/kill -s HUP $MAINPID
 # Having non-zero Limit*s causes performance problems due to accounting overhead
 # in the kernel. We recommend using cgroups to do container-local accounting.
@@ -32,6 +26,10 @@ TimeoutStartSec=0
 Delegate=yes
 # kill only the docker process, not all processes in the cgroup
 KillMode=process
+# restart the docker process if it exits prematurely
+Restart=on-failure
+StartLimitBurst=3
+StartLimitInterval=60s
 
 [Install]
 WantedBy=multi-user.target
