--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,37 @@
 ---
 
+- name: install required packages
+  when: ansible_distribution == "CentOS"
+  yum:
+    name:
+      - yum-utils
+      - device-mapper-persistent-data
+      - lvm2
+  tags:
+    - yum
+
+- name: set up the repository
+  when: ansible_distribution == "CentOS"
+  yum_repository:
+    name: 'Docker-CE-Stable'
+    description: Docker Community Edition Repository
+    state: present
+    baseurl: 'https://download.docker.com/linux/centos/7/$basearch/stable'
+    gpgcheck: True
+    gpgkey: 'https://download.docker.com/linux/centos/gpg'
+  notify: yum-clean-metadata
+  tags:
+    - yum
+
+- name: ensure legacy rpms are absent
+  when: docker_legacy|length > 1
+  yum:
+    name: "{{ docker_legacy }}"
+    state: absent
+  tags:
+    - yum
+
 - name: ensure sysctl settings are set for docker
-  when: ansible_connection != 'docker'
   sysctl:
     name: "{{ item }}"
     value: 1
@@ -23,12 +53,6 @@
   tags:
     - docker
 
-- name: test if docker is installed
-  command: docker version
-  register: dockerinstalled
-  ignore_errors: True
-  changed_when: False
-
 - name: install python-pip
   yum:
     name: python-pip
@@ -36,12 +60,52 @@
   tags:
     - pip
 
-- name: install docker
+- name: uninstall docker client for python
+  become: True
+  shell: 'pip uninstall -y docker-py || /bin/true'
+  no_log: True
+  ignore_errors: True
+  changed_when: False
+  tags:
+    - skip_ansible_lint
+    - uninstall
+
+- name: install docker client for python
+  pip:
+    name: docker
+    state: present
+    version: "{{ pip_docker_version }}"
+  changed_when: False  # workaround for bug in pip:
+  tags:
+    - python
+
+- name: ensure docker compose is installed
+  pip:
+    name: docker-compose
+    state: present
+    version: "{{ pip_docker_compose_version }}"
+  changed_when: False  # workaround for bug in pip:
+  tags:
+    - docker
+
+- name: install docker engine
   become: True
   yum:
     name: "{{ docker_package_name }}-{{ docker_package_version }}"
     state: present
     update_cache: True
+  tags:
+    - yum
+
+- name: enable docker
+  systemd:
+    name: docker
+    enabled: True
+    daemon_reload: True
+  notify:
+    - start docker
+  tags:
+    - yum
 
 - name: create docker environment file
   when: docker_http_proxy is defined or docker_https_proxy is defined
@@ -54,8 +118,10 @@
     force: True
   notify:
     - restart docker
+  tags:
+    - template
 
-- name: remove the docker proxy config
+- name: remove previous docker proxy config, if any
   file:
     path: /etc/systemd/docker.service.d/http-proxy.conf
     state: absent
@@ -95,6 +161,8 @@
   register: unit
   notify:
     - restart docker
+  tags:
+    - template
 
 - name: ensure /etc/docker exists
   file:
@@ -105,40 +173,18 @@
   template:
     src: daemon.json
     dest: /etc/docker/daemon.json
-
-- name: uninstall docker client for python
-  become: True
-  shell: 'pip uninstall -y docker-py || /bin/true'
-  no_log: True
-  ignore_errors: True
-  changed_when: False
+  notify:
+    - restart docker
   tags:
-    - skip_ansible_lint
-    - uninstall
+    - template
 
-- name: install docker client for python
-  pip:
-    name: docker
-    state: present
-    version: "{{ pip_docker_version }}"
-  changed_when: no  # workaround for bug in pip:
-  tags:
-    - python
-
-- name: ensure docker compose is installed
-  pip:
-    name: docker-compose
-    state: present
-    version: "{{ pip_docker_compose_version }}"
-  changed_when: no  # workaround for bug in pip:
-  tags:
-    - docker
+- meta: flush_handlers
 
 - name: add any docker_users to docker group
   user:
     name: "{{ item }}"
     groups: docker
-    append: yes
+    append: True
   when: docker_users is defined
   with_items: "{{ docker_users }}"
   tags:
