--- a/molecule/default/tests/test_default.yml
+++ b/molecule/default/tests/test_default.yml
@@ -1,8 +1,20 @@
-# Molecule managed
-
 ---
-file:
-  /etc/hosts:
+service:
+  docker:
+    enabled: true
+    running: true
+group:
+  docker:
     exists: true
-    owner: root
-    group: root
+mount:
+  /dev/shm:
+    exists: true
+    opts:
+      - rw
+      - nosuid
+      - nodev
+    source: tmpfs
+    filesystem: tmpfs
+interface:
+  docker0:
+    exists: true
