--- a/templates/docker.service
+++ b/templates/docker.service
@@ -11,7 +11,7 @@ Type=notify
 # exists and systemd currently does not support the cgroup feature set required
 # for containers run by docker
 ExecStart=/usr/bin/dockerd \
---data-root={{ docker_graph_dir }} \
+{% if docker_package_version == '1.13.1' %}--graph={% else %}--data-root={{ docker_graph_dir }}{% endif %} \
 --exec-opt native.cgroupdriver=systemd \
 --add-runtime docker-runc=/usr/libexec/docker/docker-runc-current \
 --userland-proxy-path=/usr/libexec/docker/docker-proxy-current \
