--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.8
 # ansible only supports python3 in versions >= 2.5
-envlist = py{27,36,37}-ansible{27,devel}
+envlist = py{27,36,37}-ansible{26,27,28,devel}
 skipsdist = true
 skip_missing_interpreters = True
 
@@ -11,6 +11,7 @@ deps =
     -rrequirements.txt
     ansible26: ansible>=2.6,<2.7
     ansible27: ansible>=2.7,<2.8
+    ansible28: ansible>=2.8,<2.9
     ansibledevel: git+https://github.com/ansible/ansible.git
 commands =
     pip list
