👌 Fixes conversion warning.
[WARNING]: The value 1 (type int) in a string field was converted to u'1' (type

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,7 +38,7 @@
 - name: ensure sysctl settings are set for docker
   sysctl:
     name: "{{ item }}"
-    value: 1
+    value: '1'
     state: present
     reload: true
     ignoreerrors: true
