--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,8 +7,10 @@ driver:
   provider:
     name: virtualbox
 
-lint:
-  name: yamllint
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
 
 platforms:
   - name: instance
@@ -17,13 +19,5 @@ platforms:
 
 provisioner:
   name: ansible
-  lint:
-    name: ansible-lint
-
-scenario:
-  name: default
-
 verifier:
-  name: goss
-  lint:
-    name: yamllint
+  name: ansible
