--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,13 +5,14 @@
 # rhel8 will not support either, but podman/cri-o/runC
 
 docker_package_name: docker
-docker_package_version: 1.13.1
+docker_package_version: '1.13.1'
 
 # docker_package_name: docker-ce
 # docker_package_version: 18.06.1.ce
-
-pip_docker_version: 3.5.1
-pip_docker_compose_version: 1.23.1
+pip_requests_version: '2.27.1'
+pip_certifi_version:  '2020.4.5.1'
+pip_docker_version: '3.5.1'
+pip_docker_compose_version: '1.23.1'
 
 
 docker_graph_dir: /var/lib/docker
