--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,9 +13,9 @@ lint: |
   ansible-lint
 
 platforms:
-  - name: instance
-    box: redesign/centos7
-    box_url: https://app.vagrantup.com/redesign/boxes/centos7
+  - name: centos7
+    box: voladynamics/centos7
+    box_url: https://app.vagrantup.com/voladynamics/boxes/centos7
 
 provisioner:
   name: ansible
